# aic-community-collector

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.claude/skills/aic-collect/: SKILL.md
checkpoints/: README.md
checkpoints/pi05_aic_cable_insert_ur5e/: global_step_11040
configs/: community_random_config.yaml  community_random_config_shifted.yaml  e2e_default.yaml  e2e_low_spec_20hz.yaml  e2e_test.yaml  e2e_trial2_only.yaml  hybrid_training_data.yaml  vision_test.yaml  vision_test_cheatcode.yaml  vision_test_no_gt.yaml  vision_test_shifted.yaml
configs/team/: preset.yaml  preset_v4_12scope.yaml  preset_v4_sc.yaml  preset_v4_sfp.yaml  preset_v4_supplement_m13_m14.yaml  seed_ledger.yaml  seed_ledger_v3.yaml
configs/team/presets/: trial_1.yaml  trial_2.yaml  trial_3.yaml
docs/: config-reference.md  hf-batch-automation-runbook.md  openpi-policy-guide.md  team-1800-round.md  usage-guide.md
docs/superpowers/plans/: 2026-04-20-team-campaign-presets.md  2026-04-20-team-seed-sharding.md  2026-04-26-team-seed-sharding-blindspot-fixes.md
docs/superpowers/specs/: 2026-04-20-team-campaign-presets-design.md  2026-04-20-team-seed-sharding-design.md  2026-04-26-team-seed-sharding-blindspot-fixes-design.md
policies/: CheatCodeInner.py  CollectCheatCode.py  CollectDispatchWrapper.py  CollectWrapper.py  RunACTHybrid.py  RunACTv1.py  RunOpenPI.py  VisionCheatCode.py  _register.py  aic_dataconfig.py  aic_policy.py
scripts/: archive_legacy_queue.sh  collect_e2e.sh  deploy_policies.sh  migrate_compressed_camera_topics.py  run_webapp.sh  smoke_test_f5.sh  smoke_test_partial_trial.sh
src/aic_collector/: __init__.py  build_engine_config.py  build_training_config.py  metrics.py  postprocess_run.py  sampler.py  scene_builder.py  scene_plan.py  team_preset.py  webapp.py
src/aic_collector/automation/: __init__.py  batch_runner.py  manifest.py  round_helpers.py
src/aic_collector/job_queue/: __init__.py  consumer_cli.py  layout.py  (+4 more)
tests/: test_automation_batch_runner.py  test_automation_manifest.py  test_build_engine_config.py  test_consumer_cli.py  test_hf_automation_package_docs.py  test_hz_report.py  test_job_queue.py  test_load_results.py  test_policy_env.py  test_postprocess_flatten.py  test_prefect_flow.py  test_round_helpers.py  test_scene_builder.py  test_scene_plan.py  test_team_preset.py  test_team_preset_trials.py  test_topic_migration.py  test_training_sampler.py  test_webapp_automation.py  test_webapp_automation_command.py  test_webapp_team_mode.py  test_webapp_team_mode_state.py  test_worker.py  test_worker_state_file.py
(+5 files in other folders)
