[project]
name = "aic-community-collector"
version = "0.1.0"
description = "AIC 챌린지 커뮤니티 데이터 수집 도구"
authors = [{ name = "Changyong Um", email = "e7217@naver.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30",
    "pyyaml",
    "numpy",
    "scipy",
    "prefect>=3.0",
    "fakeredis<2.27",
    "huggingface-hub>=1.13.0",
]

[project.scripts]
aic-collector = "aic_collector.webapp:main"
aic-prefect-run = "aic_collector.prefect.serve:main"
aic-collector-worker = "aic_collector.job_queue.consumer_cli:main"
aic-automation-batch = "aic_collector.automation.batch_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aic_collector"]

[tool.pytest.ini_options]
addopts = [
    "-p", "no:launch_ros",
    "-p", "no:launch_testing",
    "-p", "no:ament_lint",
    "-p", "no:ament_xmllint",
    "-p", "no:ament_flake8",
    "-p", "no:ament_copyright",
    "-p", "no:ament_pep257",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
