[project]
name = "aic-community-collector"
version = "0.1.0"
description = "AIC 챌린지 커뮤니티 데이터 수집 도구"
authors = [{ name = "Changyong Um", email = "e7217@naver.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30",
    "pyyaml",
    "numpy",
    "scipy",
    "prefect>=3.0",
    "fakeredis<2.27",
    "huggingface-hub>=1.13.0",
    "opencv-python-headless>=4.9.0,<4.13.0",
    "av>=15.0.0,<16.0.0",
    "imageio>=2.34.0,<3.0.0",
    "pandas>=2.0.0",
    "mcap>=0.0.10",
    "mcap-ros2-support>=0.5.0",
    "datasets>=4.8.5",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "packaging>=25.0",
    "fsspec>=2026.2.0",
]

[project.scripts]
aic-collector = "aic_collector.webapp:main"
aic-prefect-run = "aic_collector.prefect.serve:main"
aic-collector-worker = "aic_collector.job_queue.consumer_cli:main"
aic-automation-batch = "aic_collector.automation.batch_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aic_collector"]

[tool.pytest.ini_options]
norecursedirs = ["third_party"]
addopts = [
    "-p", "no:launch_ros",
    "-p", "no:launch_testing",
    "-p", "no:ament_lint",
    "-p", "no:ament_xmllint",
    "-p", "no:ament_flake8",
    "-p", "no:ament_copyright",
    "-p", "no:ament_pep257",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
